[tool.poetry]
name = "ttrack"
version = "0.2.0"
description = ""
authors = ["Alexander Astashov <alexander.astashov.vl@gmail.com>"]
readme = "README.md"
packages = [{include = "ttrack", from = "src"}]

[tool.poetry.scripts]
ttrack = "ttrack.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
workdays = "*"
pydantic = {extras = ["dotenv"], version = "*"}
coloredlogs = "*"
pyperclip = "*"
python-dateutil = "*"
aiohttp = "*"
cleo = "*"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
ipython = "*"

[tool.poetry.group.qa.dependencies]
ruff = "*"

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
exclude_lines = [
    "raise NotImplementedError",
    "if TYPE_CHECKING",
    "pragma: no cover",
]

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
    "D203", # `one-blank-line-before-class`
    "D212", # `multi-line-summary-first-line`
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".cache",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".idea",
    "**/__pycache__/**",
    "htmlcov",
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101", # Use of `assert` detected
    "D", # pydocstyle - we disable all pydocstyle rules for the tests directory
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
